<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:context=".SecondActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/secondTool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            >

            <ImageView
                android:shadowDy="3"
                android:shadowDx="2"
                android:shadowColor="#000000"
                android:id="@+id/backIM"
                android:src="@drawable/ic_keyboard_backspace_black_24dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/button_color"
                android:text="Contact with some one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/generalCV"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">


                <TextView
                    android:shadowDy="3"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:id="@+id/geTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center"
                    android:padding="30dp"
                    android:shadowColor="@color/text_color"
                    android:text="@string/general_n_emergency"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/medicalCV"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">


                <TextView
                    android:shadowDy="3"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:id="@+id/meTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center"
                    android:padding="30dp"
                    android:shadowColor="@color/text_color"
                    android:text="@string/medical_n_emergency"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/roadCV"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">


                <TextView
                    android:shadowDy="3"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:id="@+id/reTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center"
                    android:padding="30dp"
                    android:shadowColor="@color/text_color"
                    android:text="@string/road_n_emergency"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/assaultlCV"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">


                <TextView
                    android:shadowDy="3"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:id="@+id/aeTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center"
                    android:padding="30dp"
                    android:shadowColor="@color/text_color"
                    android:text="@string/assault_n_emergency"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/fireCV"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">


                <TextView
                    android:shadowDy="3"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:id="@+id/feTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center"
                    android:padding="30dp"
                    android:shadowColor="@color/text_color"
                    android:text="@string/fire_n_emergency"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/policeCV"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">


                <TextView
                    android:shadowDy="3"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:id="@+id/peTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:gravity="center"
                    android:padding="30dp"
                    android:shadowColor="@color/text_color"
                    android:text="@string/police_n_emergency"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>

</layout>